Se crea formulario

--- a/index.html
+++ b/index.html
@@ -77,22 +77,121 @@
                     <h3 class="text-center">Registrate</h3>
                     <form class="shadow border rounded p-4">
 
+                    <div class="row">
+                      <div class="col-6">
                         <div class="input-group mb-3">
-                            <span class="input-group-text" id="basic-addon1">
-                                <i class="bi bi-person-circle"></i>
-                            </span>
-                            <input type="text" class="form-control" placeholder="nombre usuario">
-                        </div>
+                          <span class="input-group-text" id="basic-addon1">
+                            <i class="bi bi-person-circle"></i>
+                          </span>
+                          <input type="text" class="form-control" placeholder="Nombre del paciente">
 
+                      </div>
+                      </div>
+                      <div class="col-6">
                         <div class="input-group mb-3">
-                            <span class="input-group-text" id="basic-addon1">
-                                <i class="bi bi-key-fill"></i>
-                            </span>
-                            <input type="text" class="form-control" placeholder="contraseña usuario">
-                        </div>
+                          <span class="input-group-text" id="basic-addon1">
+                            <i class="bi bi-person-vcard"></i>
+                          </span>
+                          <input type="text" class="form-control" placeholder="Cédula">
+                      </div>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-6">
+                        <div class="input-group mb-3">
+                          <span class="input-group-text" id="basic-addon1">
+                            <i class="bi bi-person-circle"></i>
+                          </span>
+                          <input type="text" class="form-control" placeholder="Edad">
 
-                        
+                      </div>
+                      </div>
+                      <div class="col-6">
+                        <div class="input-group mb-3">
+                          <span class="input-group-text" id="basic-addon1">
+                            <i class="bi bi-person-vcard"></i>
+                          </span>
+                          <input type="text" class="form-control" placeholder="IPS">
+                      </div>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-6">
+                        <div class="input-group mb-3">
+                          <span class="input-group-text" id="basic-addon1">
+                            <i class="bi bi-person-circle"></i>
+                          </span>
+                          <input type="text" class="form-control" placeholder="RH">
 
+                      </div>
+                      </div>
+                      <div class="col-6">
+                        <div class="input-group mb-3">
+                          <span class="input-group-text" id="basic-addon1">
+                            <i class="bi bi-person-vcard"></i>
+                          </span>
+                          <input type="text" class="form-control" placeholder="Email">
+                      </div>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-6">
+                        <div class="input-group mb-3">
+                          <span class="input-group-text" id="basic-addon1">
+                            <i class="bi bi-person-circle"></i>
+                          </span>
+                          <input type="text" class="form-control" placeholder="Peso">
+
+                      </div>
+                      </div>
+                      <div class="col-6">
+                        <div class="input-group mb-3">
+                          <span class="input-group-text" id="basic-addon1">
+                            <i class="bi bi-person-vcard"></i>
+                          </span>
+                          <input type="text" class="form-control" placeholder="Estatura">
+                      </div>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-6">
+                        <div class="input-group mb-3">
+                          <span class="input-group-text" id="basic-addon1">
+                            <i class="bi bi-person-circle"></i>
+                          </span>
+                          <input type="text" class="form-control" placeholder="Telefono">
+
+                      </div>
+                      </div>
+                      <div class="col-6">
+                        <div class="input-group mb-3">
+                          <span class="input-group-text" id="basic-addon1">
+                            <i class="bi bi-person-vcard"></i>
+                          </span>
+                          <input type="text" class="form-control" placeholder="Estado civil">
+                      </div>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-6">
+                        <div class="input-group mb-3">
+                          <span class="input-group-text" id="basic-addon1">
+                            <i class="bi bi-person-circle"></i>
+                          </span>
+                          <input type="text" class="form-control" placeholder="Dirección">
+
+                      </div>
+                      </div>
+                      <div class="col-6">
+                        <div class="input-group mb-3">
+                          <span class="input-group-text" id="basic-addon1">
+                            <i class="bi bi-person-vcard"></i>
+                          </span>
+                          <input type="text" class="form-control" placeholder="Residencia">
+                      </div>
+                      </div>
+                    </div>
+  
                         <button class="btn btn-primary mx-auto d-block" type="submit">enviar</button>
                     </form>
 
