--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                       <div class="col-6">
                         <div class="input-group mb-3">
                           <span class="input-group-text" id="basic-addon1">
-                            <i class="bi bi-person-circle"></i>
+                            <i class="bi bi-cake-fill"></i>
                           </span>
                           <input type="text" class="form-control" placeholder="Edad">
 
@@ -119,7 +119,7 @@
                       <div class="col-6">
                         <div class="input-group mb-3">
                           <span class="input-group-text" id="basic-addon1">
-                            <i class="bi bi-person-circle"></i>
+                            <i class="bi bi-activity"></i>
                           </span>
                           <input type="text" class="form-control" placeholder="RH">
 
@@ -128,7 +128,7 @@
                       <div class="col-6">
                         <div class="input-group mb-3">
                           <span class="input-group-text" id="basic-addon1">
-                            <i class="bi bi-person-vcard"></i>
+                            <i class="bi bi-envelope-fill"></i>
                           </span>
                           <input type="text" class="form-control" placeholder="Email">
                       </div>
@@ -138,7 +138,7 @@
                       <div class="col-6">
                         <div class="input-group mb-3">
                           <span class="input-group-text" id="basic-addon1">
-                            <i class="bi bi-person-circle"></i>
+                            <i class="bi bi-123"></i>
                           </span>
                           <input type="text" class="form-control" placeholder="Peso">
 
@@ -147,7 +147,7 @@
                       <div class="col-6">
                         <div class="input-group mb-3">
                           <span class="input-group-text" id="basic-addon1">
-                            <i class="bi bi-person-vcard"></i>
+                            <i class="bi bi-rulers"></i>
                           </span>
                           <input type="text" class="form-control" placeholder="Estatura">
                       </div>
@@ -157,7 +157,7 @@
                       <div class="col-6">
                         <div class="input-group mb-3">
                           <span class="input-group-text" id="basic-addon1">
-                            <i class="bi bi-person-circle"></i>
+                            <i class="bi bi-telephone-fill"></i>
                           </span>
                           <input type="text" class="form-control" placeholder="Telefono">
 
@@ -166,7 +166,7 @@
                       <div class="col-6">
                         <div class="input-group mb-3">
                           <span class="input-group-text" id="basic-addon1">
-                            <i class="bi bi-person-vcard"></i>
+                            <i class="bi bi-postcard-heart"></i>
                           </span>
                           <input type="text" class="form-control" placeholder="Estado civil">
                       </div>
@@ -176,7 +176,7 @@
                       <div class="col-6">
                         <div class="input-group mb-3">
                           <span class="input-group-text" id="basic-addon1">
-                            <i class="bi bi-person-circle"></i>
+                            <i class="bi bi-house-door-fill"></i>
                           </span>
                           <input type="text" class="form-control" placeholder="Dirección">
 
@@ -185,14 +185,14 @@
                       <div class="col-6">
                         <div class="input-group mb-3">
                           <span class="input-group-text" id="basic-addon1">
-                            <i class="bi bi-person-vcard"></i>
+                           <i class="bi bi-flag-fill"></i>
                           </span>
                           <input type="text" class="form-control" placeholder="Residencia">
                       </div>
                       </div>
                     </div>
   
-                        <button class="btn btn-primary mx-auto d-block" type="submit">enviar</button>
+                        <button class="btn btn-primary mx-auto d-block" type="submit">Enviar</button>
                     </form>
 
                 </div>
