--- a/index.html
+++ b/index.html
@@ -3,31 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GESTIONTECH</title>
+    <title>Inicio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="./assets/styles/estilos.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="../../../assets/img/icon.png" type="image/x-icon">
+    <link rel="stylesheet" href="../../../assets/styles/estilos.css">
 </head>
 <body>
 
     <header>
         <nav class="navbar navbar-expand-lg menu navbar-dark fixed-top">
             <div class="container-fluid">
-              <img src="./assets/img/logotipo.png" alt="logo" width="60" height="60">
+              <img src="./assets/img/logotipo.png" alt="logo" width="130" height="70">
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link active" aria-current="page" href="#">Inicio</a>
                   </li>
                   </li>
                 </ul>
-                <form class="d-flex" role="search">
-                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                  <button class="btn btn-outline-success" type="submit">Search</button>
-                </form>
               </div>
             </div>
           </nav>
@@ -35,7 +35,7 @@
     <main>
         <section class="banner text-white">
             <h3>SURATECH2</h3>
-            <p>Atrevete a gestionar y controlar tus signos vitales</p>
+            <p style="font-size: 50px;">Atrévete a gestionar y controlar tus signos vitales</p>
             <a href="#textomuestra" class="btn btn-primary">Ver más</a>
         </section>
         <section class="container my-5">
@@ -47,7 +47,7 @@
                     <h3>SURATECH2</h3>
                     <hr>
                     <p id="textomuestra">
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque ex consequatur nobis ab, quaerat, error reprehenderit quo aliquam officiis reiciendis explicabo ea quidem fugiat, in voluptatem est voluptates earum tempora.
+                      Nuestra empresa se dedica a ofrecer soluciones innovadoras en salud, con un enfoque en la prevención y el bienestar de nuestros pacientes. A través de un programa exclusivo, realizamos el monitoreo en tiempo real de los signos vitales, brindando información precisa y actualizada sobre la salud de cada persona. Nuestro objetivo es detectar posibles riesgos de forma temprana y proporcionar un seguimiento constante para promover una vida más saludable y activa.
                     </p>
                     <button class="btn btn-outline-primary">
                         Ver reportes
@@ -55,19 +55,28 @@
                 </div>
             </div>    
         </section>
+         <section class="section2 my-5">
+            <div class="row">
+              <div class="col-6">
+                <img src="./assets/img/advise.png" width="800px" alt="">
+               </div>
+                    <div class="col-6 mb-0 mt-5">
+                      <img src="./assets/img/tigre2.png" alt="tigre" width="700px" class="img-fluid tigreCorona">
+                  </div>
+            </div>    
+        </section>
         <section class="container my-5">
             <div class="row justify-content-center">
                 <div class="col-8">
-                    <h3 class="text-center">Registrate</h3>
+                    <h3 class="text-center">¡Regístrate aquí! ▼</h3>
                     <form class="shadow border rounded p-4">
-
                     <div class="row">
                       <div class="col-6">
                         <div class="input-group mb-3">
                           <span class="input-group-text" id="basic-addon1">
                             <i class="bi bi-person-circle"></i>
                           </span>
-                          <input type="text" class="form-control" placeholder="Nombre del paciente">
+                          <input type="text" class="nombre form-control" placeholder="Nombre del paciente">
 
                       </div>
                       </div>
@@ -76,7 +85,7 @@
                           <span class="input-group-text" id="basic-addon1">
                             <i class="bi bi-person-vcard"></i>
                           </span>
-                          <input type="text" class="form-control" placeholder="Cédula">
+                          <input type="text" class="cedula form-control" placeholder="Cédula">
                       </div>
                       </div>
                     </div>
@@ -86,7 +95,7 @@
                           <span class="input-group-text" id="basic-addon1">
                             <i class="bi bi-cake-fill"></i>
                           </span>
-                          <input type="text" class="form-control" placeholder="Edad">
+                          <input type="text" class="edad form-control" placeholder="Edad">
 
                       </div>
                       </div>
@@ -95,7 +104,7 @@
                           <span class="input-group-text" id="basic-addon1">
                             <i class="bi bi-person-vcard"></i>
                           </span>
-                          <input type="text" class="form-control" placeholder="IPS">
+                          <input type="text" class="ips form-control" placeholder="IPS">
                       </div>
                       </div>
                     </div>
@@ -105,7 +114,7 @@
                           <span class="input-group-text" id="basic-addon1">
                             <i class="bi bi-activity"></i>
                           </span>
-                          <input type="text" class="form-control" placeholder="RH">
+                          <input type="text" class="rh form-control" placeholder="RH">
 
                       </div>
                       </div>
@@ -114,7 +123,7 @@
                           <span class="input-group-text" id="basic-addon1">
                             <i class="bi bi-envelope-fill"></i>
                           </span>
-                          <input type="text" class="form-control" placeholder="Email">
+                          <input type="text" class="email form-control" placeholder="Email">
                       </div>
                       </div>
                     </div>
@@ -124,7 +133,7 @@
                           <span class="input-group-text" id="basic-addon1">
                             <i class="bi bi-123"></i>
                           </span>
-                          <input type="text" class="form-control" placeholder="Peso">
+                          <input type="text" class="peso form-control" placeholder="Peso">
 
                       </div>
                       </div>
@@ -133,7 +142,7 @@
                           <span class="input-group-text" id="basic-addon1">
                             <i class="bi bi-rulers"></i>
                           </span>
-                          <input type="text" class="form-control" placeholder="Estatura">
+                          <input type="text" class="estatura form-control" placeholder="Estatura">
                       </div>
                       </div>
                     </div>
@@ -143,7 +152,7 @@
                           <span class="input-group-text" id="basic-addon1">
                             <i class="bi bi-telephone-fill"></i>
                           </span>
-                          <input type="text" class="form-control" placeholder="Telefono">
+                          <input type="text" class="telefono form-control" placeholder="Telefono">
 
                       </div>
                       </div>
@@ -152,7 +161,7 @@
                           <span class="input-group-text" id="basic-addon1">
                             <i class="bi bi-postcard-heart"></i>
                           </span>
-                          <input type="text" class="form-control" placeholder="Estado civil">
+                          <input type="text" class="estadoCivil form-control" placeholder="Estado civil">
                       </div>
                       </div>
                     </div>
@@ -162,7 +171,7 @@
                           <span class="input-group-text" id="basic-addon1">
                             <i class="bi bi-house-door-fill"></i>
                           </span>
-                          <input type="text" class="form-control" placeholder="Dirección">
+                          <input type="text" class="direccion form-control" placeholder="Dirección">
 
                       </div>
                       </div>
@@ -171,12 +180,12 @@
                           <span class="input-group-text" id="basic-addon1">
                            <i class="bi bi-flag-fill"></i>
                           </span>
-                          <input type="text" class="form-control" placeholder="Residencia">
+                          <input type="text" class="residencia form-control" placeholder="Residencia">
                       </div>
                       </div>
                     </div>
   
-                        <button class="btn btn-primary mx-auto d-block" type="submit">Enviar</button>
+                        <button class="btn btn-primary mx-auto d-block botonIndex" type="submit">Enviar</button>
                     </form>
 
                 </div>
@@ -186,6 +195,8 @@
     <footer>
 
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="./src/controllers/controladormain.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
