--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                       <div class="col-6">
                         <div class="input-group mb-3">
                           <span class="input-group-text" id="basic-addon1">
-                            <i class="bi bi-person-vcard"></i>
+                            <i class="bi bi-hospital"></i>
                           </span>
                           <input type="text" class="ips form-control" placeholder="IPS">
                       </div>
